--- a/Portfolio/src/Achivements.css
+++ b/Portfolio/src/Achivements.css
@@ -1,20 +1,12 @@
-:root {
-    --accent: #4f46e5;
-    --p-2: #22d3ee;
-    --text: #0f172a;
-    --p-bg: #333;
-    --p-border: #a971f5;
-    --shadow: 0 8px 24px rgba(0,0,0,0.08);
-    --shadow-hover: 0 12px 32px rgba(0,0,0,0.12);
-}
-
-.awards {
+#awards {
     display: block;
     text-align: center;
     margin: 2rem;
     padding: 10px 20px;
     font-size: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    color: white;
 }
 
 p {
