--- a/Portfolio/src/Projects.css
+++ b/Portfolio/src/Projects.css
@@ -18,6 +18,30 @@
     }
 }
 
+#calculatorProgram {
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+
+#formsApplication {
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+
+#bmiCalculator {
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+
+#portfolio {
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+
 #projectTitle {
     margin: 2rem auto 0.5rem;
     text-align: center;
