--- a/Portfolio/src/Resume.css
+++ b/Portfolio/src/Resume.css
@@ -15,6 +15,7 @@
 
 #aboutResume {
     font-size: 15px;
+    text-align: center;
     font-weight: bold;
 }
 
@@ -67,6 +68,10 @@
     display: none;
 }
 
+.btn-preview-btn {
+    text-align: center;
+}
+
 .skills, .certifications {
     margin-top: 2rem;
 }
@@ -87,4 +92,28 @@
     background-color: #a855f7;
     margin: 0.5rem;
     cursor: pointer;
+}
+
+.fade-in {
+    animation: fadeInUp 0.6s ease forwards;
+    opacity: 0;
+}
+
+.fade-in:nth-child(even) {
+    animation-delay: 0.2s;
+}
+
+.fade-in:nth-child(odd) {
+    animation-delay: 0.4s;
+}
+
+@keyframes fadeInUp {
+    from {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(20px);
+        opacity: 1;
+    }
 }
