fixed each and every name from class to className

--- a/Portfolio/src/Resume.css
+++ b/Portfolio/src/Resume.css
@@ -68,7 +68,11 @@
     display: none;
 }
 
-.btn-preview-btn {
+#btn-download-btn {
+    text-align: center;
+}
+
+#btn-preview-btn {
     text-align: center;
 }
 
