--- a/Portfolio/src/Resume.css
+++ b/Portfolio/src/Resume.css
@@ -43,6 +43,46 @@
     margin-bottom: 2rem;
 }
 
+#skills {
+    text-align: center;
+}
+
+#certifications {
+    font-size: 20px;
+    text-align: center;
+}
+
+#certificationList {
+    text-align: center;
+}
+
+.btn-preview-btn {
+    background-color: #a855f7;
+    color: white;
+    border: none;
+    border-radius: 0.3rem;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.btn-download-btn {
+    background-color: #a855f7;
+    color: white;
+    border: none;
+    border-radius: 0.3rem;
+    font-size: 15px;
+    cursor: pointer;
+    padding: 10px 20px;
+}
+
+.btn-download-btn:hover {
+    background-color:#9333ea;
+}
+
+.resume-actions {
+    justify-content: center;
+}
+
 .btn {
     padding: 0.75rem 1.5rem;
     border: none;
@@ -51,6 +91,10 @@
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s ease;
+}
+
+.icons {
+    text-align: center;
 }
 
 .btn:hover {
