--- a/Portfolio/src/css/Contact.css
+++ b/Portfolio/src/css/Contact.css
@@ -30,6 +30,7 @@
 
 .subtitle {
   text-align: center;
+  color: #6c63ff;
 }
 
 #name:hover {
@@ -77,7 +78,7 @@
 }
 
 .contact-form button {
-  width: 100%;
+  width: 105%;
   padding: 0.75rem 1.5rem;
   background-color: #6c63ff;
   color: #fff;
